force-app/main/default/objects/FrameNo_Target__c/FrameNo_Target__c.object-meta.xml
<CustomObject>
    <label>FrameNo Target</label>
    <nameField>
        <displayFormat>FT_{0000}</displayFormat>
        <label>FrameNo Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FrameNoTarget</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>