force-app/main/default/objects/FrameNo_Target__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>FrameNoTarget</relationshipLabel>
    <relationshipName>FrameNoTarget</relationshipName>
    <type>Lookup</type>
</CustomField>