force-app/main/default/objects/FrameNo_Target__c/fields/FrameNo__c.field-meta.xml
<CustomField>
    <fullName>FrameNo__c</fullName>
    <label>FrameNo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>