force-app/main/default/objects/FrameNo_Target__c/fields/Repair_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Repair_Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Pattern</label>
    <referenceTo>Repair_Pattern__c</referenceTo>
    <relationshipLabel>FrameNoTarget</relationshipLabel>
    <relationshipName>FrameNoTarget</relationshipName>
    <type>Lookup</type>
</CustomField>